代码优化 UTF-8